Revert "Another refactor"
This reverts commits
d911a1ab60d575ed98865b14b943bba7fb318f3c
101475fb0ad638be2baafa4fb22a154f90d55e9b
85b21fee2487ac1b5d297c0e0c4b0fafdad6a91c
2c25886fec73990e456f061408df53bcf09926eb
09298affd0e2d7753cad9bd4941943e0a88713bd

Signed-off-by: BAUDRIER Dimitri <dimitri.baudrier@rte-france.com>